--- a/LAB21/Views/Home/Registration.cshtml
+++ b/LAB21/Views/Home/Registration.cshtml
@@ -1,4 +1,4 @@
-﻿<form method="post" action="result">
+﻿<form method="get" action="Result">
     <h4>Please fill the form to register!</h4>
     <p>First Name:</p>
     <input type="text" name="FirstName" />
@@ -10,7 +10,16 @@
     <input type="number" name="PhoneNumber" />
     <p>Password:</p>
     <input type="password" name="Password" />
-  
+    <p>Age</p>
+    <input type ="number"  name="Age" />
+
 
     <input type="submit" />
 </form>
+
+<p> @ViewBag.FirstName</p>
+<p> @ViewBag.LastName</p>
+<p>@ViewBag.email</p>
+<p>@ViewBag.PhoneNumber</p>
+<p>@ViewBag.Password</p>
+<p>@ViewBag.Age</p>
